[package]
name = "spy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.14"
tokio = { version = "1.24.2", features = ["full"] }
clap = { version = "4.1.4", features = ["derive"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
url = "2.3.1"
futures = "0.3.25"
anyhow = "1.0.68"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
